--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -12,12 +12,12 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">window1</property>
     <child>
-      <object class="GtkEventBox" id="cardWidget">
+      <object class="GtkEventBox" id="cardWidgetBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="visible_window">False</property>
         <child>
-          <object class="GtkVBox" id="cardWidget1">
+          <object class="GtkVBox" id="cardWidget">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
@@ -202,12 +202,12 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">window1</property>
     <child>
-      <object class="GtkEventBox" id="deviceWidget">
+      <object class="GtkEventBox" id="deviceWidgetBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="visible_window">False</property>
         <child>
-          <object class="GtkVBox" id="streamWidget2">
+          <object class="GtkVBox" id="deviceWidget">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
@@ -1331,12 +1331,12 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">window1</property>
     <child>
-      <object class="GtkEventBox" id="streamWidget">
+      <object class="GtkEventBox" id="streamWidgetBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="visible_window">False</property>
         <child>
-          <object class="GtkVBox" id="streamWidget2">
+          <object class="GtkVBox" id="streamWidget">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
