--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -32,7 +32,7 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents">
+         <widget class="QWidget" name="streamsVBox">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -75,7 +75,7 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents_2">
+         <widget class="QWidget" name="recsVBox">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -118,7 +118,7 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents_3">
+         <widget class="QWidget" name="sinksVBox">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -161,7 +161,7 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents_4">
+         <widget class="QWidget" name="sourcesVBox">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -204,13 +204,13 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents_5">
+         <widget class="QWidget" name="cardsVBox">
           <property name="geometry">
            <rect>
             <x>0</x>
             <y>0</y>
             <width>730</width>
-            <height>461</height>
+            <height>433</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -221,15 +221,15 @@
              </property>
             </widget>
            </item>
-           <item>
-            <widget class="QCheckBox" name="showVolumeMetersCheckButton">
-             <property name="text">
-              <string>Show volume meters</string>
-             </property>
-            </widget>
-           </item>
           </layout>
          </widget>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="showVolumeMetersCheckButton">
+         <property name="text">
+          <string>Show volume meters</string>
+         </property>
         </widget>
        </item>
       </layout>
