--- a/src/devicewidget.ui
+++ b/src/devicewidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>237</height>
+    <height>266</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,9 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset theme="audio-volume-muted"/>
+        <iconset theme="audio-volume-muted">
+         <normaloff/>
+        </iconset>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -66,7 +68,9 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset theme="emblem-default"/>
+        <iconset theme="emblem-default">
+         <normaloff/>
+        </iconset>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -90,10 +94,10 @@
     </layout>
    </item>
    <item>
-    <widget class="QWidget" name="channelsVBox" native="true"/>
+    <layout class="QVBoxLayout" name="channelsVBox"/>
    </item>
    <item>
-    <widget class="QCheckBox" name="checkBox">
+    <widget class="QCheckBox" name="advancedOptions">
      <property name="text">
       <string>Show advanced options</string>
      </property>
@@ -101,85 +105,89 @@
    </item>
    <item>
     <widget class="QWidget" name="advancedWidget" native="true">
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="3" column="0">
-       <widget class="QCheckBox" name="encodingFormatDTS">
-        <property name="text">
-         <string>DTS</string>
-        </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QWidget" name="encodingSelect" native="true">
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QCheckBox" name="encodingFormatPCM">
+           <property name="text">
+            <string>PCM</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QCheckBox" name="encodingFormatAC3">
+           <property name="text">
+            <string>AC3</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QCheckBox" name="encodingFormatEAC3">
+           <property name="text">
+            <string>EAC3</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QCheckBox" name="encodingFormatDTS">
+           <property name="text">
+            <string>DTS</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QCheckBox" name="encodingFormatMPEG">
+           <property name="text">
+            <string>MPEG</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QCheckBox" name="encodingFormatAAC">
+           <property name="text">
+            <string>AAC</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QCheckBox" name="encodingFormatPCM">
-        <property name="text">
-         <string>PCM</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="2">
-       <widget class="QCheckBox" name="encodingFormatMPEG">
-        <property name="text">
-         <string>MPEG</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>&lt;b&gt;Latency offset:&lt;/b&gt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QCheckBox" name="encodingFormatAC3">
-        <property name="text">
-         <string>AC3</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QCheckBox" name="encodingFormatEAC3">
-        <property name="text">
-         <string>EAC3</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QCheckBox" name="encodingFormatAAC">
-        <property name="text">
-         <string>AAC</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="2" colspan="2">
-       <widget class="QSpinBox" name="offsetButton">
-        <property name="suffix">
-         <string> ms</string>
-        </property>
-       </widget>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>&lt;b&gt;Latency offset:&lt;/b&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="offsetButton">
+          <property name="suffix">
+           <string> ms</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer">
+    <widget class="Line" name="line">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
+    </widget>
    </item>
   </layout>
  </widget>
  <resources/>
  <connections>
   <connection>
-   <sender>checkBox</sender>
+   <sender>advancedOptions</sender>
    <signal>toggled(bool)</signal>
    <receiver>advancedWidget</receiver>
    <slot>setVisible(bool)</slot>
