--- a/src/streamwidget.ui
+++ b/src/streamwidget.ui
@@ -17,7 +17,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="iconImage">
        <property name="text">
         <string>icon</string>
        </property>
