--- a/src/streamwidget.ui
+++ b/src/streamwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>416</width>
     <height>103</height>
    </rect>
   </property>
@@ -17,11 +17,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="iconImage">
-       <property name="text">
-        <string>icon</string>
-       </property>
-      </widget>
+      <widget class="QLabel" name="iconImage"/>
      </item>
      <item>
       <widget class="QLabel" name="boldNameLabel">
@@ -45,21 +41,19 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="deviceButton">
+      <widget class="QToolButton" name="deviceButton">
        <property name="text">
-        <string>Device</string>
+        <string>device</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="muteToggleButton">
-       <property name="text">
-        <string/>
+      <widget class="QToolButton" name="muteToggleButton">
+       <property name="toolTip">
+        <string>Mute audio</string>
        </property>
        <property name="icon">
-        <iconset theme="emblem-default">
-         <normaloff/>
-        </iconset>
+        <iconset theme="audio-volume-muted"/>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -67,9 +61,9 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="lockToggleButton">
-       <property name="text">
-        <string>lock</string>
+      <widget class="QToolButton" name="lockToggleButton">
+       <property name="toolTip">
+        <string>Lock channels together</string>
        </property>
        <property name="checkable">
         <bool>true</bool>
