channels: Align channel sliders
With previous QVBarLayout + QHBarLayout the sliders weren't aligned.

--- a/src/devicewidget.ui
+++ b/src/devicewidget.ui
@@ -92,7 +92,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="channelsVBox"/>
+    <layout class="QGridLayout" name="channelsGrid"/>
    </item>
    <item>
     <widget class="QCheckBox" name="advancedOptions">
