--- a/src/streamwidget.ui
+++ b/src/streamwidget.ui
@@ -73,7 +73,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="channelsVBox"/>
+    <layout class="QGridLayout" name="channelsGrid"/>
    </item>
    <item>
     <widget class="Line" name="line">
