--- a/src/streamwidget.ui
+++ b/src/streamwidget.ui
@@ -65,6 +65,9 @@
        <property name="toolTip">
         <string>Lock channels together</string>
        </property>
+       <property name="icon">
+        <iconset theme="changes-prevent"/>
+       </property>
        <property name="checkable">
         <bool>true</bool>
        </property>
