--- a/src/devicewidget.ui
+++ b/src/devicewidget.ui
@@ -38,6 +38,19 @@
       </widget>
      </item>
      <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
       <widget class="QToolButton" name="muteToggleButton">
        <property name="toolTip">
         <string>Mute audio</string>
