devicewidget: Set the PCM encoding always enabled
..and don't allow to disable it. The
pa_ext_device_restore_save_formats() always needs at least one encoding
to be present.

This way it is done in pavucontrol(-gtk) also.

closes lxde/pavucontrol-qt#7

--- a/src/devicewidget.ui
+++ b/src/devicewidget.ui
@@ -109,8 +109,14 @@
         <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="0">
           <widget class="QCheckBox" name="encodingFormatPCM">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>PCM</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
