--- a/src/streamwidget.ui
+++ b/src/streamwidget.ui
@@ -84,6 +84,9 @@
        <property name="checkable">
         <bool>true</bool>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
