Channel: Align slider controls correclty
- set fixed size for "%(dB)" label based on estimated widest value
- remove unneeded horizontal spacing
- use translatable labels (so translators can reorder values, if needed)

--- a/src/devicewidget.ui
+++ b/src/devicewidget.ui
@@ -111,7 +111,11 @@
     </widget>
    </item>
    <item>
-    <layout class="QGridLayout" name="channelsGrid"/>
+    <layout class="QGridLayout" name="channelsGrid">
+     <property name="horizontalSpacing">
+      <number>0</number>
+     </property>
+    </layout>
    </item>
    <item>
     <widget class="QCheckBox" name="advancedOptions">
