--- a/src/cardwidget.ui
+++ b/src/cardwidget.ui
@@ -13,9 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="nameHLayout" stretch="0,1">
      <item>
       <widget class="QLabel" name="iconImage">
        <property name="text">
@@ -32,17 +32,28 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_3">
-     <property name="text">
-      <string>Profile:</string>
-     </property>
-    </widget>
+   <item>
+    <layout class="QHBoxLayout" name="profileHLayout" stretch="0,0,1">
+     <item>
+      <widget class="QCheckBox" name="profileCB">
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="profileLabel">
+       <property name="text">
+        <string>Profile:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="profileList"/>
+     </item>
+    </layout>
    </item>
-   <item row="1" column="1">
-    <widget class="QComboBox" name="profileList"/>
-   </item>
-   <item row="2" column="0" colspan="2">
+   <item>
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -52,5 +63,38 @@
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>profileCB</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>profileLabel</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>137</x>
+     <y>47</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>147</x>
+     <y>47</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>profileCB</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>profileList</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>137</x>
+     <y>47</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>315</x>
+     <y>47</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
