--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -337,7 +337,28 @@
          </property>
         </widget>
        </item>
-      </layout>
+       <item>
+        <widget class="QCheckBox" name="enableSystrayCheckButton">
+         <property name="text">
+          <string>Show pavucontrol-qt in notification area</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="startInSystrayCheckButton">
+         <property name="text">
+          <string>Start pavucontrol-qt in notification area</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="closeToSystrayCheckButton">
+         <property name="text">
+          <string>Close pavucontrol-qt to notification area</string>
+         </property>
+        </widget>
+       </item>
+       </layout>
      </widget>
     </widget>
    </item>
