--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -340,21 +340,21 @@
        <item>
         <widget class="QCheckBox" name="enableSystrayCheckButton">
          <property name="text">
-          <string>Show pavucontrol-qt in notification area</string>
+          <string>Show icon in notification area</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="startInSystrayCheckButton">
          <property name="text">
-          <string>Start pavucontrol-qt in notification area</string>
+          <string>Start in notification area</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="closeToSystrayCheckButton">
          <property name="text">
-          <string>Close pavucontrol-qt to notification area</string>
+                 <string>Close/minimize to notification area</string>
          </property>
         </widget>
        </item>
