GUI fixes: Elide playback name label if needed and…
If the name is too long, elide it centrally, so that a horizontal scrollbar isn't needed (and isn't shown).

Also, don't force a height on progressbars because some widget styles may not show any bar with a forced height.

Closes https://github.com/lxqt/pavucontrol-qt/issues/99 and closes https://github.com/lxqt/pavucontrol-qt/issues/75

--- a/src/streamwidget.ui
+++ b/src/streamwidget.ui
@@ -27,7 +27,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="nameLabel">
+      <widget class="ElidingLabel" name="nameLabel">
        <property name="text">
         <string>Device Title</string>
        </property>
@@ -103,6 +103,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ElidingLabel</class>
+   <extends>QLabel</extends>
+   <header>elidinglabel.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
